// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка в десктопе предзагрузит одну фотку 1`] = `
Array [
  <link
    as="image"
    href="first-image"
    rel="preload"
  />,
]
`;

exports[`карточка в мобилке предзагрузит две фотки 1`] = `
Array [
  <link
    as="image"
    href="first-image"
    rel="preload"
  />,
  <link
    as="image"
    href="second-image"
    rel="preload"
  />,
]
`;

exports[`карточка если в начале стоят не картинки ничего не будет для них делать 1`] = `
Array [
  <link
    as="image"
    href="first-image"
    rel="preload"
  />,
]
`;
